--- a/.github/workflows/docs-ci.yml
+++ b/.github/workflows/docs-ci.yml
@@ -3,8 +3,8 @@ name: Docs - CI
 on:
   push:
     paths:
-      - chainweb/docker-build/**
-      
+      - packages/apps/kadena-docs/**
+
 jobs:
   cypress-regression:
     runs-on: ubuntu-latest
