--- a/.github/workflows/docs-ci.yml
+++ b/.github/workflows/docs-ci.yml
@@ -19,8 +19,12 @@ jobs:
           GIT_SHA: ${{ github.sha }}
           PROJECT_ID: ${{ secrets.vercel_projectid_docs }}
         run: |
-          echo "PREVIEW_URL=$(curl -H "Content-type: application/json" -H "Authorization: Bearer $VERCEL_TOKEN" "https://api.vercel.com/v5/deployments?teamId=kadena-js&projectId=$PROJECT_ID&state=BUILDING,READY&target=preview" | jq --arg commit_sha "$COMMIT_SHA" -r '.deployments[] | select(.meta.githubCommitSha == $commit_sha ) | .url ')" >> $GITHUB_ENV
-      - name: test placeholdcer
+          echo "Sleeping a bit to ensure Vercel has kicked off build (this should be a hook tbh)"
+          sleep 10
+          PREVIEW_URL=$(curl -H "Content-type: application/json" -H "Authorization: Bearer $VERCEL_TOKEN" "https://api.vercel.com/v5/deployments?teamId=kadena-js&projectId=$PROJECT_ID&state=BUILDING,READY&target=preview" | jq --arg commit_sha "$COMMIT_SHA" -r '.deployments[] | select(.meta.githubCommitSha == $commit_sha ) | .url ')
+          echo $PREVIEW_URL
+          echo "PREVIEW_URL=$PREVIEW_URL" >> $GITHUB_ENV
+      - name: npx cypress run
         working-directory: packages/apps/kadena-docs
         run: |
           npm install
