feat: create executable function from the contract

--- a/packages/libs/client-utils/package.json
+++ b/packages/libs/client-utils/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@kadena/client": "workspace:^",
     "@kadena/cryptography-utils": "workspace:*",
+    "@kadena/types": "workspace:^",
     "debug": "~4.3.4"
   },
   "devDependencies": {
