--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -38,7 +38,10 @@ jobs:
         run: pnpm install
 
       - name: Build client and dependencies
-        run: pnpm run build --filter @kadena/client
+        run: pnpm run build --filter @kadena/client-utils
 
-      - name: run integration tests
+      - name: run client integration tests
         run: pnpm run test:integration --filter @kadena/client
+
+      - name: run client-utils integration tests
+        run: pnpm run test:integration --filter @kadena/client-utils
